Fixed bug when Menu is wrapped by devtools

--- a/src/MenuBar.css
+++ b/src/MenuBar.css
@@ -4,10 +4,6 @@ nav ul {
     list-style: none;
 }
 
-.menu-item, .menu-item a, .menu-item a * {
-    height: 30px;
-}
-
 .menu-bar {
     display: flex;
     background: #fff;
